# LearningBase

cmake-samples/: readme.md
cmake-samples/01_minimal_executable/: CMakeLists.txt  main.cpp
cmake-samples/02_flat_structure/: CMakeLists.txt  main.cpp  util.cpp  util.h
cmake-samples/03_subdirectory_structure/: CMakeLists.txt  main.cpp
cmake-samples/03_subdirectory_structure/helper/: CMakeLists.txt  util.h
cmake-samples/03_subdirectory_structure/math/: CMakeLists.txt  arithmetic.cpp
cmake-samples/04_internal_library/: CMakeLists.txt
cmake-samples/04_internal_library/example/: CMakeLists.txt
cmake-samples/04_internal_library/helper/: CMakeLists.txt
cmake-samples/04_internal_library/math/: CMakeLists.txt  arithmetic.h
cmake-samples/04_libary/: CMakeLists.txt
cmake-samples/04_libary/example/: CMakeLists.txt
cmake-samples/05_precompiled_library/: CMakeLists.txt
cmake-samples/05_precompiled_library/example/: main.cpp
cmake-samples/06_header_only/: CMakeLists.txt
cmake-samples/06_header_only/helper/: CMakeLists.txt  util.h
cmake-samples/06_header_only/math/: CMakeLists.txt  arithmetic.h
cmake-samples/07_library_source/: CMakeLists.txt
cmake-samples/07_library_source/example/: main.cpp
cmake-samples/08_fetch_library_source/: CMakeLists.txt
cmake-samples/08_manage_library_conan/: CMakeLists.txt  conanfile.txt
cmake-samples/09_Options/: CMakeLists.txt
cmake-samples/09_test/: CMakeLists.txt
cmake-samples/09_test/example/: main.cpp
cmake-samples/09_test/helper/: util.cpp
cmake-samples/09_test/math/: arithmetic.cpp  arithmetic.h
cmake-samples/09_test/tests/: CMakeLists.txt
cmake-samples/09_test/tests/helper/: ctestHelper.cpp  testHelper.cpp
cmake-samples/09_test/tests/math/: ctestArithmetic.cpp
cmake-samples/09_test_conan/: CMakeLists.txt  conanfile.txt
cmake-samples/09_test_conan/example/: CMakeLists.txt
cmake-samples/09_test_conan/tests/: CMakeLists.txt
cmake-samples/09_test_conan/tests/math/: testArithmetic.cpp
design_patterns_python/: DesignPattern_Behavioral_Chain_of_Responsability.ipynb  DesignPattern_Behavioral_Command.ipynb  DesignPattern_Creational_Builder.ipynb  DesignPattern_Creational_Factory.ipynb  DesignPattern_Creational_Prototype.ipynb  DesignPattern_Creational_Singleton.ipynb  DesignPattern_Structural_Adapter.ipynb  DesignPattern_Structural_Bridge.ipynb  DesignPattern_Structural_Facade.ipynb  DesignPattern_Structural_Proxy.ipynb  DesignPattern_structural_composite.ipynb  DesignPatterns_Behavioral_Interpreter.ipynb  DesignPatterns_Behavioral_Iterator.ipynb  DesignPatterns_Behavioral_Mediator.ipynb  DesignPatterns_Behavioral_Memento.ipynb  DesignPatterns_Behavioral_Observer.ipynb  DesignPatterns_Behavioral_State.ipynb  DesignPatterns_Behavioral_Strategy.ipynb  DesignPatterns_Behavioral_Template.ipynb  DesignPatterns_Behavioral_Visitor.ipynb  DesignPatterns_Functional_Monads.ipynb  DesignPatterns_Structural_Flyweight.ipynb
performance_python/: 01_profiling.ipynb  02_optimization.ipynb
